A little step towards java 9
* From Class.newInstance to Class#getDeclaredConstructor()#newInstance()