@@ -15,7 +15,6 @@ import com.wegas.core.ejb.VariableDescriptorFacade;
 import com.wegas.core.exception.client.WegasNotFoundException;
 import com.wegas.core.merge.annotations.WegasEntity;
 import com.wegas.core.merge.annotations.WegasEntityProperty;
-import com.wegas.core.merge.utils.LifecycleCollector;
 import com.wegas.core.merge.utils.WegasCallback;
 import com.wegas.core.persistence.AbstractEntity;
 import com.wegas.core.persistence.AcceptInjection;
@@ -665,7 +664,7 @@ abstract public class VariableDescriptor<T extends VariableInstance>
             AbstractScope newScope = null;
             try {
                 if (scope != null) {
-                    newScope = scope.getClass().newInstance();
+                    newScope = scope.getClass().getDeclaredConstructor().newInstance();
                     newScope.setBroadcastScope(scope.getBroadcastScope());
                 }
             } catch (Exception ex) {
